# binnacle

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
binnacle/: cli.py  settings.py  utils.py
binnacle/adapters/: knowledge_base.py
binnacle/adapters/k8s/: __init__.py  api_discovery.py  cluster_management.py  k8s_orm.py
binnacle/adapters/typedb/: fakes.py  object_to_typeql.py  tql_builder.py  typedb_knowledge_graph.py  typedb_to_object.py  typedb_utils.py
binnacle/api/: main.py  routes.py
binnacle/model/: __init__.py  api.py  cluster.py  graph.py  k8s_object.py  networking.py  primitives.py  utils.py
binnacle/services/: cluster_service.py  graph_utils.py  project_service.py  query_knowledge_base.py  topology_service.py  unit_of_work.py
doc/: DEVELOPER-GUIDE.md
tests/integration/: test_typedb_uow.py
tests/unit/adapters/k8s/: test_cluster_management.py
tests/unit/adapters/typedb/: test_object_to_typeql.py  test_tql_builder.py  test_typedb_knowledge_graph.py  test_typedb_to_object.py
tests/unit/api/: test_routes.py
tests/unit/model/: test_k8s_object.py  test_utils.py
tests/unit/services/: test_unit_of_work.py
